# AI_Projects

./: .gitignore  README.md  pyproject.toml  requirements.txt
Taxi/: reward_mem.pkl  tax_test.py  taxi.py
frozen_lake/: dqnModel.pt  dqnModel.py  frozen_model.py  frozen_model1.pkl  frozen_model_no_slip.pkl  frozen_model_test.py  frozen_no_slip.py  test.py  train.py
lunar_lander/: DQNAgent.py  config.yaml  dashboard.html  demo.py  dqnModel.py  dqnModel_lunar_lander.pt  env  experiments.py  hparams.py  interface.py  lunar.py  lunar_test.py  main.py  train.py  trainAgentWebVersion.py  train_agent.py  ui_dqn_model.pt  unit_tests_DQNagent_load.py  unit_tests_DQNagent_train.py  unit_tests_DQNangent_save.py  unit_tests_agent.py  unit_tests_agent_new.py  unit_tests_agent_original.py  unit_tests_hparams.py  unit_tests_model.py  unit_tests_model_original.py  unit_tests_trainAgent.py  visual_demo.py
lunar_lander/web/: new_dqnModel_lunar_lander.pt  test.tx  trainAgentWebVersion.html  trainAgentWebVersion.py
